# llm-from-scratch

./: LICENSE.txt  README.md  pyproject.toml
src/llm_from_scratch/: __about__.py  __init__.py  attention.py  dataset.py  feed_forward.py  generate_text.py  gpt_config.py  gpt_model.py  layer_norm.py  transformer.py
tests/: conftest.py  test_attention.py  test_dataset.py  test_feed_forward.py  test_generate_text.py  test_gpt_model.py  test_layer_norm.py  test_transformer.py
